package pt.isep.psoft.alsafe.airportmanagement.domain;

public enum Orientation {
    N, S, E, W, NW, NE, SW, SE;
}
